tests/parser/fail/self-field.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfField = (
  |a b c self d e f|

  run = (42)
)
